<resources>
    <string name="app_name">MyPlan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="emailadd">Email Address</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone Number</string>
    <string name="birthday">Birthday - year</string>
    <string name="choose_pwd">Choose Passcode - 4 Digits</string>
    <string name="enter">Enter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="emergency">Emergency</string>
    <string name="title_activity_add_contact">Contacts</string>
    <string name="addcontactfromphone">Add contact from phonelist</string>
    <string name="choosefromexisting">Choose existing contact</string>
    <string name="addnewcontact">Add new contact</string>
    <string name="title_activity_add_contact_from_phone">AllContacts</string>
    <string name="title_activity_splash">Splash</string>
    <string name="prototypeby"><![CDATA[Prototype by Weis & Wise]]></string>
    <string name="welcome">Welcome to MyPlan</string>
    <string name="forgetpwd">Forgot Passcode ?</string>
    <string name="forgetpwdtitle">Forgot Passcode</string>
    <string name="symptops">Symptoms</string>
    <string name="strategies">Strategies</string>
    <string name="contacts">Contacts</string>
    <string name="hopebox">Hope Box</string>
    <string name="moodratings">Mood Ratings</string>
    <string name="nearestemerroom">Nearest emergency room</string>
    <string name="quickmsg">Quick Messages</string>
    <string name="shareloc">Share my location</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_sign_up_1">SignUpActivity_1</string>
    <string name="tvbirthday">Birthday</string>
    <string name="password">Passcode</string>
    <string name="insertpersonalimg">Insert Personal Image</string>
    <string name="howtosignup">How to Sign Up</string>
    <string name="howtosignin">How to Sign In</string>
    <string name="howtostartnewcontact">How to start a new contact</string>
    <string name="howtoaddhelp">How to add help</string>
    <string name="enterpwd">Enter Passcode</string>
    <string name="pwdprotectdata">A Passcode protects your data</string>
    <string name="enteremailtoreset">Enter email to reset your Passcode</string>
    <string name="send">Send</string>
    <string name="howareyoufeelingtoday">How are you feeling today?</string>
    <string name="todaysmoodrating">Today\'s Mood Rating</string>
    <string name="wouldliketoaddnote">Would you like to add a note</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="addnotetotodaymoodrating">Add note to today\'s mood rating</string>
    <string name="savenote">Save Note</string>
    <string name="never">Never</string>
    <string name="always">Always</string>
    <string name="nextquesion">Next Question (2/5)</string>
    <string name="title_activity_quick_message_details">QuickMessageDetailsActivity</string>
    <string name="messages">Messages</string>
    <string name="editlist">Edit List</string>
    <string name="addnewmsg">Add new message</string>
    <string name="help_list">Help List</string>
    <string name="title_activity_emergency_contact">Emergency Contact</string>
    <string name="onlyoneemergencycontact">You can have maximum of 1 contact assigned to emergency</string>
    <string name="title_activity_help_list">Edit Help List</string>
    <string name="edithelplistmsg">You can have maximum of 10 assigned contact listed in help.Please reassign priority to one contact before adding a new.</string>
    <string name="title_activity_create_quick_msg">Choose recipient</string>
    <string name="title_activity_send_message">Send Message</string>
    <string name="notimsg">Notification Message</string>
    <string name="notimsgdetail">I am using the app myplan to help me cope. The following message has been set as an automatic message and can be sent by me when I need your help.This is just an information to you, so that you know the reason for sending the following message :-</string>
    <string name="yourqckmsg">Your quick message</string>
    <string name="profile">Profile</string>
    <string name="geotracking">Geo Tracking</string>
    <string name="exportmyplan">Export MyPlan</string>
    <string name="notifications">Notifications</string>
    <string name="feedback">FeedBack</string>
    <string name="share">Share</string>
    <string name="profiledit">Profile Edit</string>
    <string name="title_activity_profile">Profile</string>
    <string name="save">Save</string>
    <string name="title_activity_moodratings">Mood Ratings</string>
    <string name="sidas">Sidas</string>
    <string name="mood">Mood</string>
    <string name="test_interval">Test Interval</string>
    <string name="everyweek">Every Week</string>
    <string name="everytwoweek">Every 2 week</string>
    <string name="everythreeweek">Every 3 week</string>
    <string name="onceamonth">Once a month</string>
    <string name="enablelocationsharing">Enable sharing of location</string>
    <string name="title_activity_geotracking">Geotracking</string>
    <string name="includemoodratings">Include Mood Ratings</string>
    <string name="exportpdftoemail">Export PDF to email</string>
    <string name="title_activity_exportplan">Export MyPlan</string>
    <string name="title_activity_notification">Notifications</string>
    <string name="addnewbox">Add new box</string>
    <string name="title_activity_addhopebox">Add Hope Box</string>
    <string name="addfolderimage">Add folder image</string>
    <string name="title">Title</string>
    <string name="namefolder">Name Folder</string>
    <string name="err_network_not_available">Check Internet connection!</string>
    <string name="addnewsymptom">Add new symptom</string>
    <string name="signuperror">Sign Up Error</string>
    <string name="dangersignal">Danger signals</string>
    <string name="text">Text</string>
    <string name="title_activity_symptoms">Symptoms</string>
    <string name="action_edit">Edit</string>
    <string name="title_activity_strategy">Strategy</string>
    <string name="title_activity_strategy_details_other">StrategyDetailsOtherActivity</string>
    <string name="title_activity_strategy_details_other_submitted">Inspired By</string>
    <string name="addnewstrategy">Add new strategy</string>
    <string name="inspiration">Inspiration</string>
    <string name="action_add">Add</string>
    <string name="alarms">Alarms</string>
    <string name="morning">Morning</string>
    <string name="network">Contact</string>
    <string name="images">Images</string>
    <string name="addastrategy">Add a strategy</string>
    <string name="internetconn">Please check internet connection</string>
    <string name="writevalidemail">Please write valid email address</string>
    <string name="title_activity_addsymptom">Add Symptom</string>
    <string name="alarm">Alarm</string>
    <string name="music">Music</string>
    <string name="links">Links</string>
    <string name="action_save">Save</string>
    <string name="addstrategy">Add Strategy</string>
    <string name="fillupfield">Please fill up all field to sign up.</string>
    <string name="addcontact">Add Contact</string>
    <string name="search">Search</string>
    <string name="contactsaved">Contact saved successfully</string>
    <string name="used_by">Used by</string>
    <string name="subby">Submitted by</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="addtomystrategies">Add to my strategies</string>
    <string name="alert">Alert</string>
    <string name="alertStrategymsg">Would you like to add this inspiration to your strategies ?</string>
    <string name="repeat">Repeat</string>
    <string name="once">Once</string>
    <string name="sound">Sound</string>
    <string name="snooze">Snooze</string>
    <string name="label">Label</string>
    <string name="allcontact">All Contacts</string>
    <string name="addimage">Add Image</string>
    <string name="chooseexistingimage">Choose existing image</string>
    <string name="takenewimage">Take a new image</string>
    <string name="choosefromphone">Choose from phone</string>
    <string name="choosefromlink">Choose from link</string>
    <string name="addmusic">Add music</string>
    <string name="musiclist">Music List</string>
    <string name="addlink">Add Link</string>
    <string name="url">URL</string>
    <string name="addlinktext">How to add a link - if you want to link to a page or another website ,select the web address</string>
    <string name="insertlink">Insert Link</string>
    <string name="strategyadded">Strategy Added Successfully.</string>
    <string name="hopeboxadded">Hope box added</string>
    <string name="newelement">New Element</string>
    <string name="chooseimage">Choose Image</string>
    <string name="choosemusic">Choose music</string>
    <string name="choosevideo">Choose video</string>
    <string name="leaveanote">Leave a note</string>
    <string name="linktoweb">Link to web</string>
    <string name="strategy">Strategy</string>
    <string name="strategyedit">Strategy editted successfully</string>
    <string name="edit">Edit</string>
    <string name="dangersignaltxt">One or two of these symptoms alone can\'t predict a mental illness. But if a person is experiencing several at one time and the symptom are causing serious problem in ability to study,work or relate to other,he/she should be seen by a mental health prefessional.People with suicidal thought or intent,or thought of harming other need immediate attention.</string>
    <string name="socialwithdraw">Social withdrawal</string>
    <string name="increateusedrugs">Increase use of drugs</string>
    <string name="mentaldisorder">Mental disorder symptoms</string>
    <string name="previousattempt">Previous suicide attempt</string>
    <string name="chooseexistingvideo">Choose existing video</string>
    <string name="recordvideo">Record new video</string>
    <string name="leavenote">Leave a note</string>
    <string name="pleaseaddnote">Please add note</string>
    <string name="pickagainwithlesstime">Please pick video with less then 20 seconds</string>
    <string name="ok">OK</string>
    <string name="view_calendar">View Calendar</string>
    <string name="take_full_test">Take Full Test</string>
    <string name="Sidas0">0-14 - You are doing well.</string>
    <string name="Sidas15">15-21 - You are having a difficult time right now.</string>
    <string name="Sidas22">22-50 - You are having a crisis. Seek help.</string>
    <string name="sidas_description">The SIDAS is designed to screen individuals in the community for presence of suicidal thoughts and assess the severity of these thoughts. It consists of five times, each targeting an attribute of suicidal thoughts: frequency, controllability, closeness to attempt, level of distress associated with the thoughts and impact on daily functioning. Responses are measured on a 10-point scale. Items are coded so that a higher total score reflects more severe suicidal thoughts.</string>
    <string name="selected_music">Your selected music</string>
    <string name="max_5_music_files">You can only select a maximum of 5 Music files</string>
    <string name="setting_off_location">Geotracking settings off please switch on setting for sharing your location.</string>
</resources>