<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_add_strategy_image"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/backcolor"
              android:orientation="vertical"
              tools:context="percept.myplan.Activities.AddStrategyImageActivity">


    <include layout="@layout/app_toolbar"/>

    <TextView
        android:id="@+id/tvChooseFromPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/choosefromphone"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:background="@color/sidemenu_seperator"/>

    <TextView
        android:id="@+id/tvChooseFromLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/choosefromlink"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sidemenu_seperator"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/max_5_music_files"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/selected_music"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvMusic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
