<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backcolor"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="percept.myplan.Activities.SendMessageActivity">

    <include layout="@layout/app_toolbar"
        android:id="@+id/include"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/img_capture"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/notimsg"
        android:textAllCaps="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/lay_send_message_border"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/notimsgdetail"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/yourqckmsg"
        android:textAllCaps="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/tvMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/lay_send_message_border"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/notimsgdetail"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="25dp"
            android:background="@drawable/btn_register_border"
            android:text="@string/send"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />
    </RelativeLayout>

</LinearLayout>
